--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ], "allowUnreachableCode": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
